--- a/site/public/css/login.css
+++ b/site/public/css/login.css
@@ -42,7 +42,7 @@
     width: 40%;
     background-color: #f7e0ab61;
     border-radius: 25px;
-    border: #0f2b36 solid;
+    border: #6b813f solid;
 }
 
 .caixa-formulario {
@@ -99,19 +99,6 @@
     color: #0a181d;
     background-color: #d9d9d9a6;
 }
-
-#img_olho {
-    position: absolute;
-    left: 938px;
-    top: 452px;
-    cursor: pointer;
-    background-color: #b4b4b4b4;
-    width: 10px;
-    border-radius: 5px;
-    z-index: 6;
-    height: 16px;
-    width: 16px;
-} 
 
 #msg_email p, #msg_senha p {
     font-size: 12px;
