--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -300,7 +300,18 @@ body {
     border-radius: 17px;
     padding: 0.85em 1.3em;
     cursor: pointer;
+    transition: 0.8s;
 }
+
+#btn-bisbilhotar:hover {
+    background-color: #142F38;
+    transform: scale(1.1, 1.1);
+}
+    
+#btn-bisbilhotar:active {
+    transform: scale(0.9, 0.9);
+}
+
 
 /* 1ª sessão */
 section {
@@ -550,9 +561,9 @@ section {
 }
 
 .valores .lista-valores {
-    width: 45%;
+    width: 63%;
     columns: 2;
-    padding: 0 0 0 1.2em;
+    padding: 0 0 0 1.3em;
     font-size: 1rem;
 }
 
