--- a/site/public/dashboard/dashboards.css
+++ b/site/public/dashboard/dashboards.css
@@ -201,9 +201,14 @@
     border-radius: 20px;
 }
 
-.conteudo-hidden {
+#drop-subMenuLista {
     display: none;
 }
+
+/* 
+#drop-subMenuTemporizador {
+    display: none;
+ */
 
 .hidden-completo {
     width: 100%;
@@ -262,6 +267,108 @@
 
 
 
+    /* Temporizador */
+.temporizador-completo, 
+.cronometro-completo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: space-evenly; */
+    text-align: center;
+    
+    
+    padding: 1.7em 0.6em;
+    margin-bottom: 1.8em;
+    width: 121%;
+
+    background: #DCD7B9;
+    border: 1px solid #000000;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    
+    /* width: 100%; */
+    height: 300px;
+}
+
+.sub-titulo-arrow {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    margin-bottom: 2;
+}
+
+.sub-titulo-arrow h2 {
+    font-size: 1.8rem;
+    margin-bottom: 8px;
+}
+
+.btn_passar {
+    margin-left: 15px;
+    padding: 5px 14px;
+
+    background-color: #142E38;
+    border-radius: 50px;
+
+    color: #AA9F00;
+    font-size: 1.5rem;
+    font-weight: 800;
+
+    cursor: pointer;
+    
+    margin-top: 17px;
+    margin-bottom: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.9rem;
+}
+
+
+.contador-relogio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+
+    font-size: 3.2rem;
+    font-weight: 600;
+}
+
+.campo-temporizador {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 1.2em;
+}
+
+.campo-temporizador label {
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+.campo-temporizador input {
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    font-size: 1rem;
+    font-weight: 400;
+    padding: 6px 12px;
+
+
+    background-color: #CBCBCB;
+    border: #8b8b8b91 outset;
+    border-radius: 16px;
+}
+
+.btns-cronometro {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 
 
 
