--- a/site/public/dashboard/dashboards.css
+++ b/site/public/dashboard/dashboards.css
@@ -1,3 +1,61 @@
+body {
+    background: linear-gradient(85.38deg, #EDEDE4 -23.38%, #F8F2EB 97.65%);
+}
+
+.div_BallsHeader1 {
+    position: absolute;
+    width: 320px;
+    height: 250px;
+    left: 1197px;
+    top: 10.38px;
+
+    background: #f7c5bd;
+    box-shadow: 11.8812px 16.6337px 123.565px rgba(0, 0, 0, 0.12);
+    z-index: -1;
+    filter: blur(118.812px);
+}
+
+.div_BallsHeader2 {
+    position: absolute;
+    width: 360px;
+    height: 150px;
+    left: 507px;
+    top: 5.38px;
+
+    background: #a1b182;
+    box-shadow: 11.8812px 16.6337px 123.565px rgba(0, 0, 0, 0.12);
+    z-index: -1;
+    filter: blur(118.812px);
+}
+
+.div_BallsDown1 {
+    position: absolute;
+    width: 420px;
+    height: 120px;
+    left: 97px;
+    top: 658.38px;
+
+    background: #f7c5bd;
+    box-shadow: 11.8812px 16.6337px 123.565px rgba(0, 0, 0, 0.12);
+    z-index: -1;
+    filter: blur(118.812px);
+
+}
+
+.div_BallsDown2 {
+    position: absolute;
+    width: 220px;
+    height: 280px;
+    left: 1253px;
+    top: 458.38px;
+
+    background: #a1b182;
+    box-shadow: 11.8812px 16.6337px 123.565px rgba(0, 0, 0, 0.12);
+    z-index: -1;
+    filter: blur(118.812px);
+}
+
+
 .container {
     width: 95%;
     margin: 0 auto;
@@ -8,7 +66,7 @@
 }
 
 .header {
-    background: #fc5f5f4e;
+    background: #fbeaea71;
 }
 
 .container {
@@ -268,61 +326,23 @@
 
 
     /* Temporizador */
-.temporizador-completo, 
-.cronometro-completo {
+.temporizador-completo {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: space-evenly; */
     text-align: center;
-    
     
     padding: 1.7em 0.6em;
     margin-bottom: 1.8em;
-    width: 121%;
+    width: 370px;
 
     background: #DCD7B9;
     border: 1px solid #000000;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
     
-    /* width: 100%; */
     height: 300px;
 }
-
-.sub-titulo-arrow {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    margin-bottom: 2;
-}
-
-.sub-titulo-arrow h2 {
-    font-size: 1.8rem;
-    margin-bottom: 8px;
-}
-
-.btn_passar {
-    margin-left: 15px;
-    padding: 5px 14px;
-
-    background-color: #142E38;
-    border-radius: 50px;
-
-    color: #AA9F00;
-    font-size: 1.5rem;
-    font-weight: 800;
-
-    cursor: pointer;
-    
-    margin-top: 17px;
-    margin-bottom: 12px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 0.9rem;
-}
-
 
 .contador-relogio {
     display: flex;
@@ -341,7 +361,6 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    margin-bottom: 1.2em;
 }
 
 .campo-temporizador label {
@@ -358,23 +377,79 @@
     font-weight: 400;
     padding: 6px 12px;
 
-
     background-color: #CBCBCB;
     border: #8b8b8b91 outset;
     border-radius: 16px;
 }
 
-.btns-cronometro {
+.btns_relogio {
+    width: 185px;
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: space-between;
 }
 
+    /* Cronômetro */
+.cronometro-completo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+    padding: 1.7em 0.6em;
+    margin-bottom: 1.8em;
+    width: 370px;
 
+    background: #DCD7B9;
+    border: 1px solid #000000;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+}
 
+.sub-titulo-arrow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+.sub-titulo-arrow .h2-tipo {
+    font-size: 1.8rem;
+    margin-bottom: 0 !important;
+}
 
+.sub-titulo-arrow button {
+    background: none;
+}
 
+#seta {
+    width: 60px;
+    padding-left: 10px;
+    cursor: pointer;
+}
+
+.contador-relogio {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    height: 100px;
+}
+
+.btn_passar {
+    padding: 5px 14px;
+    background-color: #142E38;
+    border-radius: 50px;
+    color: #AA9F00;
+    font-weight: 800;
+    cursor: pointer;
+    margin-top: 17px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.9rem;
+}
 
 
 
