--- a/site/public/dashboard/dashboards.css
+++ b/site/public/dashboard/dashboards.css
@@ -456,22 +456,26 @@ body {
 
 /* Bubble */
 .bubbles {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     position: absolute;
-    margin-top: 4em;
-    top: 150px;
-    left: 720px;
+    border: 2px outset #142E38;
+    border-radius: 20px;
+    background: #DBDCC9;
+    padding: 20px 60px;
+    top: 155px;
+    left: 700px;
 }
 
 .bubbles::before {
     content: '';
     display: block;
-    min-height: 420px;
-    min-width: 420px;
-    width: 45vh;
-    height: 45vh;  
+    min-height: 400px;
+    min-width: 400px;
+    width: 40vh;
+    height: 40vh;  
     background-color: var(--blob);  
     box-shadow: var(--shades);
     background-size: 1600% 1600%;
@@ -483,22 +487,21 @@ body {
       movement 40s ease-in-out infinite both;
 }
   
-  
 @keyframes transform {
-      0%,
+    0%,
     100% { border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%; } 
-     14% { border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%; } 
-     28% { border-radius: 54% 46% 38% 62% / 49% 70% 30% 51%; } 
-     42% { border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%; } 
-     56% { border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%; } 
-     70% { border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%; } 
-     84% { border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%; } 
+    14% { border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%; } 
+    28% { border-radius: 54% 46% 38% 62% / 49% 70% 30% 51%; } 
+    42% { border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%; } 
+    56% { border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%; } 
+    70% { border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%; } 
+    84% { border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%; } 
 }
   
 @keyframes movement {
-      0%,
-    100% { transform: none; }
-     50% { transform: translateY(20%) rotateY(10deg); }
+    0%,
+    100% { transform: none;}
+    50% { transform: translateY(20%) rotateY(10deg);}
 }
 
 :root {
@@ -515,220 +518,9 @@ body {
                 inset -10px 0 20px #40245e,
                 inset -40px 10px 110px #1b1648;
     }
-  }
+} 
 
-
-
-/* Gotas de água */
-/* .bubbles {
-    display: flex;
-    flex-direction: column;
-}
-
-.c {
-    position: relative;
-}
-  
-.drop {
-    position: absolute;
-    height: 200px;
-    width: 200px;
-    background: #54ABFB;
-    border-radius: 51% 49% 48% 52% / 62% 44% 56% 38%;
-    opacity: 0.8;
-    border: 2px solid #3d93ff;
-}
-  
-.drop::before {
-    content: "";
-    position: absolute;
-    height: 120%;
-    width: 120%;
-    background: #318CFE;
-    border-radius: 51% 49% 48% 52% / 62% 44% 56% 38%;
-    box-shadow: -20px 30px 16px #1B6CFB, -40px 60px 32px #1b6cfb, inset -6px 6px 10px #1B6CFB, inset 2px 6px 10px #1a74e5, inset 20px -20px 22px white, inset 40px -40px 44px #a8ceff;
-}
-  
-.drop::after {
-    content: "";
-    position: absolute;
-    height: 40px;
-    width: 40px;
-    background: #E6FDFB;
-    border-radius: 44% 56% 46% 54% / 36% 50% 50% 64%;
-    left: 130px;
-    top: 40px;
-    box-shadow: 16px 40px 0 -10px white;
-    opacity: 0.8;
-}
-  
-.drop1 {
-    left: 950px;
-    top: -202px;
-}
-  
-.drop2 {
-    left: 650px;
-    bottom: -50px;
-    z-index: -1;
-    border-radius: 46% 50% 39% 54% / 56% 57% 50% 50%;
-}
-  
-.drop2::before {
-    border-radius: 46% 50% 39% 54% / 56% 57% 50% 50%;
-} */
-
-
-#blob {
-    position: relative;
-}
-
-#blob canvas {
-    width: 1000px;
-    margin-top: -7%;
-}
-@media (max-width: 1200px) {
-    #blob canvas {
-        margin-top: -10%;
-        width: 800px;
-    }
-}
-
-@media (max-width: 600px) {
-    #blob canvas {
-        width: 800px;
-    }
-}
-  
-.controls {
-    background: #3F4656;
-    display: flex;
-    padding: 20px;
-    border-radius: 10px;
-    position: relative;
-    z-index: 3;
-    box-shadow: 0 4px 20px -1px rgba(18, 22, 33, 0.7);
-}
-
-@media (max-width: 1200px) {
-    .controls {
-        margin-top: -4%;
-    }
-}
-
-@media (max-width: 600px) {
-    .controls {
-        flex-direction: column;
-    }
-}
-  
-.controls label {
-    color: #CDD9ED;
-    font-weight: 500;
-    font-size: 14px;
-    display: block;
-    margin-bottom: 16px;
-}
-
-@media (max-width: 600px) {
-    .controls label {
-        margin-bottom: 12px;
-    }
-}
-  
-.controls [type=range] {
-    width: 160px;
-}
-
-@media (max-width: 600px) {
-    .controls [type=range] {
-        width: 280px;
-    }
-}
-
-.controls > div:not(:last-child) {
-    margin-right: 20px;
-}
-
-@media (max-width: 600px) {
-    .controls > div:not(:last-child) {
-        margin: 0 0 24px 0;
-    }
-}
-  
-.rangeSlider {
-    position: relative;
-    background: none;
-    border: 1px solid #fff;
-    border-radius: 6px;
-    cursor: pointer;
-}
-
-.rangeSlider.rangeSlider__horizontal {
-    height: 10px;
-    width: 160px;
-}
-
-.rangeSlider .rangeSlider__fill {
-    border-radius: 7px;
-    background: #fff;
-    position: absolute;
-}
-
-.rangeSlider .rangeSlider__fill:before {
-    content: "";
-    left: -2px;
-    top: -2px;
-    bottom: -2px;
-    right: -2px;
-    border: 2px solid #3F4656;
-    border-radius: 6px;
-    position: absolute;
-}
-
-.rangeSlider .rangeSlider__fill__horizontal {
-    height: 100%;
-    top: 0;
-    left: 0;
-}
-
-.rangeSlider .rangeSlider__handle {
-    border: 2px solid #3F4656;
-    cursor: grab;
-    cursor: -webkit-grab;
-    display: inline-block;
-    width: 22px;
-    height: 22px;
-    position: absolute;
-    background: white;
-    border-radius: 50%;
-}
-
-.rangeSlider .rangeSlider__handle__horizontal {
-    top: -7px;
-}
-  
-html {
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-}
-  
-* {
-    box-sizing: inherit;
-}
-
-*:before, *:after {
-    box-sizing: inherit;
-}
-    
-body .dribbble {
-    position: fixed;
-    display: block;
-    right: 20px;
-    bottom: 20px;
-}
-
-body .dribbble img {
-    display: block;
-    height: 28px;
+#btn_bubble {
+    margin-top: 7em;
+    z-index: 6;
 }
