--- a/site/public/dashboard/css/dashboard.css
+++ b/site/public/dashboard/css/dashboard.css
@@ -89,3 +89,15 @@
     justify-content: center;
     align-items: center;
 }
+
+.avisoCaptura {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 2em;
+}
+
+#avisoCaptura {
+    font-size: 0.8em;
+}
