--- a/site/public/dashboard/css/mural.css
+++ b/site/public/dashboard/css/mural.css
@@ -14,6 +14,11 @@
     flex-direction: column;
 }
 
+.h2-dashboard {
+    font-size: 2.5em !important;
+    margin-bottom: 0 !important;
+}
+
 .titulo-mensagem, 
 .titulo-mural {
     display: flex;
@@ -47,6 +52,7 @@
 }
 
 .form-postagem textarea {
+    font-family: 'Poppins', sans-serif;
     width: 90%;
     padding-left: 1.2em;
     padding-top: 0.5em;
