--- a/site/public/css/login.css
+++ b/site/public/css/login.css
@@ -115,18 +115,18 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 0.3em;
-    padding: 0.85em 1.3em;
-    color: #AA9F00;
-    font-weight: 700;
-    font-size: 1.1rem;
-    background-color: #142F38;
+    padding: 0.75em 1.16em;
+    color: #FFF;
+    font-family: Poppins;
+    font-size: 1rem;
+    background-color: #67732C;
     border-radius: 17px;
     cursor: pointer;
     transition: 0.8s;
 }
 
 #btn_entrar:hover {
-    background-color: #142F38;
+    background-color: #67732C;
     transform: scale(1.1, 1.1);
 }
 
