--- a/site/public/dashboard/css/minha-plumeria.css
+++ b/site/public/dashboard/css/minha-plumeria.css
@@ -322,10 +322,6 @@ body {
 }
 
 
-    /* Player de música */
-
-
-
     /* Temporizador */
 .temporizador-completo {
     display: flex;
@@ -333,16 +329,48 @@ body {
     align-items: center;
     text-align: center;
     
-    padding: 1.7em 0.6em;
+    padding: 1.7em 1.2em;
     margin-bottom: 1.8em;
-    width: 370px;
+    width: fit-content;
 
     background: #DCD7B9;
     border: 1px solid #000000;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
     
-    height: 300px;
+    height: fit-content;
+}
+
+#display-temporizador {
+    width: 280px;
+    display: inline-block;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    font-weight: 600;
+    padding: 0 0.3em 0 0.3em;
+    margin: 1em 0 1.2em 0;
+    background-color: #8a9651a1;
+    border-radius: 20px;
+}
+
+#display-temporizador>div {
+    padding: 1em;
+    display: inline-block;
+    justify-content: center;
+}
+
+#display-temporizador div>span {
+    padding: 14px;
+    border-radius: 3px;
+    background: #878b8a80;
+    display: inline-block;
+}
+
+smalltext {
+    padding-top: 5px;
+    font-size: 16px;
 }
 
 .contador-relogio {
@@ -376,7 +404,7 @@ body {
 
     font-size: 1rem;
     font-weight: 400;
-    padding: 6px 12px;
+    padding: 0.2em 0.4em;
 
     background-color: #CBCBCB;
     border: #8b8b8b91 outset;
@@ -400,7 +428,7 @@ body {
     
     padding: 1.7em 0.6em;
     margin-bottom: 1.8em;
-    width: 370px;
+    width: fit-content;
 
     background: #DCD7B9;
     border: 1px solid #000000;
