--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -24,6 +24,7 @@
     border: none;
     text-decoration: none;
 }
+
 * {
     font-family: 'Poppins', sans-serif;
 }
@@ -183,7 +184,6 @@ body {
     filter: blur(118.812px);
 }
 
-
 .div_allAbove {
     z-index: 6;
 }
@@ -192,21 +192,8 @@ body {
 .header {
     width: 100%;
     background: #fbeaea71;
-    z-index: 6; 
-}
-
-    /* Propriedade para deixar header fixo  */
-.sticky {
-    position: fixed;
-    /* top: 0; */
-    width: 100%;
-}
-
-.stickyBtn {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    padding: 0;
+    z-index: 6;
+    box-shadow: 0px 0px 20px 0px rgb(0 0 0 / 13%);
 }
 
 .header .container {
@@ -473,7 +460,7 @@ section {
 }
 
 #span-nome-plumeria {
-    color: #FFB357;
+    color: #788a00;
 }
 
 #span-dev {
@@ -685,7 +672,7 @@ section {
     text-align: center;
 }
 
-        /* Descrições das Funcionalidades */
+    /* Descrições das Funcionalidades */
 .descricoes {
     display: flex;
     flex-direction: column;
@@ -788,8 +775,7 @@ footer {
 }
 
 
-/*  WEB-DATA-VIZ  */
-
+/*  Estilização de alertas de erro  */
 .alerta_erro{
     display: flex;
     justify-content: center;
