--- a/site/public/dashboard/css/minha-plumeria.css
+++ b/site/public/dashboard/css/minha-plumeria.css
@@ -146,6 +146,7 @@ body {
 .sub-menu-wrap.open-menu {
     max-height: 473px;
     z-index: 999;
+    box-shadow: 0px 0px 20px 0px rgb(0 0 0 / 53%);
 }
 
 .sub-menu {
